2011-06-17  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py	(fas_user_is_in_group): Move into infrastructure
	section.

	* src/bridge.py	(BridgeConnection.forward_request_headers): Split from
	handle_connection().
	(BridgeConnection.read_request_headers)
	(BridgeConnection.read_request_payload_size): Fold into
	forward_request_headers().

	* src/bridge.py (BridgeConnection.__init__): Initialize self.handler.
	(BridgeConnection.finalize): Split from handle_connection.  Handle cases
	when handler was not initialized.
	(handle_connection): Finalize the connection even when
	conn.read_request_headers() fails.

	* src/bridge.py (BridgeConnection.forward_reply_headers): New
	function, split from handle_connection.
	(BridgeConnection.read_reply_payload_size)
	(BridgeConnection.forward_reply_payload_authenticator): Fold into
	forward_reply_headers.

	* src/bridge.py (bridge_one_request): Close server socket even if
	client has failed to connect.

	* src/bridge.py (RequestValidator): Split from RequestType.
	(RequestValidator.__init__): Remove default value of max_payload.
	Remove default_fields handling.
	(RequestValidator.validate): Rename back from validate_data.
	(RequestHandler): Rename from RequestType, use one instance per
	connection.
	(RequestHandler.validate): Remove.
	(SignRPMRequestHandler): Rename from SignRPMRequestType.
	(SignRPMRequestHandler.close): Stop zeroizing state, this object
	won't be reused for future connections.
	(SignRPMsReadRequestThread.__subheader_validator): Use RequestValidator.
	Rename from __subheader_RT.  All users updated.
	(SignRPMsRequestHandler): Rename from SignRPMsRequestType.
	(RT): New class holding named fields instead of using old
	RequestType.  Default max_payload and common fields are now handled
	here.
	(request_types): Update for new RT.
	(BridgeConnection.read_request_headers): Set self.handler.  Return only
	the verifier.
	(handle_connection): Use the separate validator directly.  Use