@@ -1110,8 +1110,22 @@ class BridgeConnection(object):
         if self.handler is not None:
             self.handler.close()
 
-def handle_connection(conn):
-    '''Handle a single connection.'''
+def handle_connection(config, client_sock, server_sock):
+    '''Handle a single connection using client_sock and server_sock.'''
+    client_sock.force_handshake()
+    cert = client_sock.get_peer_certificate()
+    assert cert is not None
+    user_name = cert.subject_common_name
+    logging.info('Client with CN %s connected', repr(user_name))
+    if (config.required_fas_group is not None and
+        not fas_user_is_in_group(config, user_name, config.required_fas_group)):
+        raise InvalidRequestError('User %s not allowed to connect'
+                                  % repr(user_name))
+
+    client_buf = double_tls.OuterBuffer(client_sock)
+    server_buf = double_tls.OuterBuffer(server_sock)
+
+    conn = BridgeConnection(config, user_name, client_buf, server_buf)
     try:
         conn.forward_request_headers()
         conn.handler.forward_request_payload(conn)
@@ -1139,26 +1153,11 @@ def bridge_one_request(config, server_listen_sock, client_listen_sock):
         try:
             logging.debug('Waiting for the client to connect')
             (client_sock, _) = client_listen_sock.accept()
-
-            client_sock.force_handshake()
-            cert = client_sock.get_peer_certificate()
-            assert cert is not None
-            user_name = cert.subject_common_name
-            logging.info('Client with CN %s connected', repr(user_name))
-            if (config.required_fas_group is not None and
-                not fas_user_is_in_group(config, user_name,
-                                         config.required_fas_group)):
-                raise InvalidRequestError('User %s not allowed to connect'
-                                          % repr(user_name))
-
-            client_buf = double_tls.OuterBuffer(client_sock)
-            server_buf = double_tls.OuterBuffer(server_sock)
-
-            conn = BridgeConnection(config, user_name, client_buf, server_buf)
-            handle_connection(conn)
-        finally:
-            if client_sock is not None:
+            try:
+                handle_connection(config, client_sock, server_sock)
+            finally:
                 client_sock.close()
+        finally:
             server_sock.close()
     except InvalidRequestError, e:
         logging.warning('Invalid request: %s', str(e))
